# ReproPilot

./: .dockerignore  .gitignore  Blog.md  Dockerfile  README.md  __init__.py  actions.py  briefing.py  checkers.py  client.py  env.py  graders.py  models.py  notebook_setup.py  openenv.yaml  pyproject.toml  rewards.py  transitions.py
artifacts/sft/: accepted_traces.jsonl  rejected_traces.jsonl  rejection_sampled_traces.jsonl
baselines/: __init__.py  random_policy.py  smart_policy.py
docs/submission_results/: README.md
evaluation/: __init__.py  evaluate_policy.py  plots.py
notebooks/: trainer.ipynb
repropilot/: __init__.py
scenarios/heldout/: heldout_baseline_unfair_111.json  heldout_cherry_picked_seed_104.json  heldout_dataset_provenance_private_109.json  heldout_hparam_test_grid_110.json  heldout_incomplete_impl_113.json  heldout_invalid_ablation_108.json  heldout_leakage_normalize_all_data_103.json  heldout_metric_mismatch_macro_f1_101.json  heldout_missing_artifact_105.json  heldout_result_mismatch_107.json  heldout_split_mismatch_validation_102.json  heldout_statistical_underpower_112.json  heldout_valid_novel_method_106.json
scenarios/train/: baseline_default_settings_034.json  baseline_no_baseline_035.json  cherry_picked_best_seed_001.json  dataset_provenance_no_card_031.json  dataset_provenance_private_test_030.json  (+34 more)
scripts/: demo_repropilot.py  export_submission_plots.py  generate_committed_submission_plots.py  http_endpoint_smoke.py
server/: __init__.py  app.py  repropilot_environment.py  reward.py
tests/: test_repropilot_core.py
