# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-repropilot"
version = "0.1.0"
description = "ReproPilot research-claim audit environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.8.0",
]

constrained = [
    "lm-format-enforcer>=0.10",
]
constrained-outlines = [
    "outlines>=0.1",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["repropilot", "repropilot.server"]
package-dir = { "repropilot" = ".", "repropilot.server" = "server" }

[tool.setuptools.package-data]
repropilot = ["scenarios/train/*.json", "scenarios/heldout/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests/test_repropilot_core.py"]
pythonpath = ["."]
